adding ability to bulk create events

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <noscript>
+      <script src='https://apis.google.com/js/client.js' />
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
